--- a/contact.html
+++ b/contact.html
@@ -1,37 +1,79 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-       <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
-    <title>Document</title>
-</head>
-<body class="body">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Contact</title>
 
-      <!-- navigation bar -->
-    <div>
-                 <nav class="navbar navbar-expand-lg bg-body-tertiary ">
-  <div class="container-fluid">
-    <a class="navbar-brand" href="#"></a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-      <div class="navbar-nav">
-        <a class="nav-link active" aria-current="page" href="index.html">About</a>
-        <a class="nav-link" href="progetx.html">Projects</a>
-        <a class="nav-link" href="contact.html">Contact</a>
-        <a class="nav-link btn btn-outline-primary " href="#">Hire Me</a>
-      
+  <!-- Bootstrap CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
+  <link rel="stylesheet" href="style.css">
+
+  <style>
+    body {
+      background-color: #0B1D51;
+      color: #fff;
+      font-family: 'Nunito', sans-serif;
+    }
+    h2.connect-page {
+      text-align: center;
+      margin: 40px 0 30px 0;
+         color: chartreuse;
+        text-align: center;
+        font-family: "Gravitas One", serif;
+        font-weight: 200;
+        font-style: normal;
+    }
+    .contact-container {
+      max-width: 500px;
+      margin: auto;
+      padding: 20px;
+      background-color: rgba(255,255,255,0.05);
+      border-radius: 10px;
+    }
+    .contact-container .form-control {
+      margin-bottom: 15px;
+      border-radius: 5px;
+    }
+    .contact-container .btn {
+      width: 100%;
+    }
+  </style>
+</head>
+<body>
+
+  <!-- Navbar -->
+  <nav class="navbar navbar-expand-lg navbar-light bg-body-tertiary shadow-sm">
+    <div class="container">
+
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" 
+              aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <div class="navbar-nav ms-auto">
+          <a class="nav-link active" href="index.html">HOME</a>
+          <a class="nav-link" href="services.html">SERVICES</a>
+          <a class="nav-link" href="resume.html">RESUME</a>
+          <a class="nav-link" href="portfolio.html">PORTFOLIO</a>
+          <a class="nav-link" href="contact.html">CONTACTS</a>
+        </div>
       </div>
     </div>
+  </nav>
+
+  <!-- Contact Form -->
+  <h2 class="connect-page">Let's Connect</h2>
+  <div class="contact-container">
+    <form>
+      <input type="text" name="name" id="full-name" class="form-control" placeholder="Name" required>
+      <input type="email" name="email" id="email" class="form-control" placeholder="Email" required>
+      <input type="tel" name="phone" id="number" class="form-control" placeholder="Contact Number">
+      <button type="submit" class="btn btn-success">Submit</button>
+    </form>
   </div>
-</nav> 
 
-
-    </div>
-
-    
+  <!-- Bootstrap JS -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
 </body>
 </html>
